# ci_project

./: CMakeLists.txt  PRESENTATION.md  README.md
include/: api_controller.h  card_pairs_game.h  memory_game.h  memory_service.h  user.h  user_service.h
src/: api_controller.cpp  card_pairs_game.cpp  main.cpp  memory_game.cpp  memory_service.cpp  user_service.cpp
web/: app.js  index.html  leaderboard.html  style.css
